# gymrec

./: .env.example  .gitignore  AGENTS.md  EXPERIMENTS.md  README.md  config.toml  finalize_pending.py  gymrec_tui.py  install.sh  keymappings.toml  main.py  provider_contract.py  providers.py  pyproject.toml
.github/workflows/: release.yml
gymrec_templates/: dataset_card.md.j2
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
tests/: test_core_helpers.py  test_finalize_pending.py  test_hf_policy_smoke.py  test_tui.py  test_turbo_backend.py
