[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymrec"
version = "0.1.0"
description = "Record and replay gameplay from Gymnasium environments as Hugging Face datasets"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "pillow",
    "python-dotenv",
    "pygame-ce",
    "vizdoom",
    "ale-py",
    "gymnasium[atari]",
    "datasets",
    "rich",
    "huggingface-hub",
    "simple-term-menu",
    "stable-retro; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "stable-retro-apple-silicon==0.9.9.post1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "scipy>=1.17.0",
]

[project.scripts]
gymrec = "main:cli"

[project.optional-dependencies]
minari = ["minari>=0.5.0"]

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
