[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymrec"
version = "0.1.1"
description = "Record and replay gameplay from Gymnasium environments as Hugging Face datasets"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "pillow",
    "python-dotenv",
    "pygame-ce",
    "vizdoom",
    "ale-py",
    "gymnasium[atari]",
    "datasets",
    "rich",
    "huggingface-hub",
    "simple-term-menu",
    "stable-retro-turbo",
    "stable-baselines3>=2.9.0",
    "supermariobrosnes-turbo>=0.3.1",
]

[project.scripts]
gymrec = "main:cli"

[project.optional-dependencies]
minari = ["minari>=0.5.0"]

[tool.hatch.build.targets.wheel]
include = ["main.py", "config.toml", "keymappings.toml"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { stable-retro-turbo = false, supermariobrosnes-turbo = false }
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
