[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymrec"
version = "0.1.1"
description = "Record and replay turbo-provider gameplay as Hugging Face datasets"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy",
    "pillow",
    "python-dotenv",
    "pygame-ce",
    "gymnasium",
    "datasets",
    "rich",
    "huggingface-hub",
    "jinja2>=3.1,<4",
    "simple-term-menu",
    "stable-retro-turbo==1.0.1.post31",
    "stable-baselines3>=2.9.0",
    "supermariobrosnes-turbo==0.3.3",
]

[project.scripts]
gymrec = "main:cli"

[project.optional-dependencies]
minari = ["minari>=0.5.0"]

[tool.hatch.build.targets.wheel]
include = ["main.py", "provider_contract.py", "providers.py", "config.toml", "keymappings.toml", "gymrec_templates/*.md.j2"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { stable-retro-turbo = false, supermariobrosnes-turbo = false }
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
